--- a/css/app.css
+++ b/css/app.css
@@ -854,9 +854,12 @@ footer{
 }
 .blog .profile-sub-table .blog-card{
   float: left;
-  width: 31.2%;
+  width: 32.2%;
   margin-right: 1.7%;
   margin-bottom: 20px;
+}
+.blog .profile-sub-table :nth-child(3n+3){
+  margin-right: 0px;
 }
 .blog .profile-sub-table .blog-card .img-container{
   float: left;
@@ -1214,7 +1217,7 @@ footer{
     margin-top: 36px;
   }
 }
-@media (min-width: 768px) and (max-width: 900px){
+@media (min-width: 768px) and (max-width: 968px){
   #hamburger-menu{
     left: 36px;
   }
@@ -1269,6 +1272,7 @@ footer{
   .blog .profile-sub-table .blog-card{
     width: 48%;
     margin-right: 4%;
+    margin-bottom: 32px;
   }
   .blog .profile-sub-table :nth-child(2n+2){
     margin-right: 0px;
@@ -1327,7 +1331,7 @@ footer{
     margin-bottom: 128px;
   }
 }
-@media (min-width: 901px) and (max-width: 1080px){
+@media (min-width: 969px) and (max-width: 1052px){
   .main-content .sub-section .profile{
     padding-left: 40px;
     padding-right: 40px;
@@ -1344,9 +1348,53 @@ footer{
     padding-left: 58px;
     width: calc(35% - 60px);
   }
+  .main-content .sub-section.profile-section .profile-table{
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  .portfolio .slider{
+    padding-left: 30px;
+    padding-right: 30px;
+    width: calc(100% - 60px);
+  }
   .portfolio .slider .sub-slider{
-    width: calc(50% - 104px);
-    margin-right: 18px;
-    margin-left: 18px;
+    width: calc(48% - 68px);
+    margin-right: 4%;
+    padding-left: 36px;
+    padding-right: 32px;
+    margin-bottom: 32px;
+  }
+  .portfolio .slider :nth-child(2n+2){
+    margin-right: 0px;
+  }
+  .blog .profile-sub-table{
+    padding-left: 30px;
+    padding-right: 30px;
+    width: calc(100% - 60px);
+  }
+  .blog .profile-sub-table .blog-card{
+    width: 48%;
+    margin-right: 4%;
+    margin-bottom: 32px;
+  }
+  .blog .profile-sub-table :nth-child(2n+2){
+    margin-right: 0px;
+  }
+  .main-content .sub-section.contact .profile, .main-content .sub-section.skills .profile{
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+  .sub-skills .section-row ul li:nth-child(2n){
+    padding-left: 76px;
+    width: calc(50% - 100px);
+    padding-right: 24px;
+  }
+  .sub-skills .section-row ul li{
+    width: calc(50% - 46px);
+    padding-left: 24px;
+    padding-right: 22px;
+  }
+  .sub-skills .section-row ul li:nth-child(2n) span.skill-star{
+    right: 24px;
   }
 }
