--- a/css/app.css
+++ b/css/app.css
@@ -82,6 +82,7 @@ body h1, h2, h3, h4, h5, h6{
 .main-content .sub-section .profile{
   max-width: 1024px;
   margin: 0px auto;
+  padding-top: 42px;
 }
 .main-content .sub-section h2{
   text-align: center;
@@ -92,7 +93,7 @@ body h1, h2, h3, h4, h5, h6{
 }
 .main-content .sub-section.profile-section h2{
   margin-bottom: 0px;
-  margin-top: 72px;
+  margin-top: 0px;
   height: 72px;
 }
 .main-content .sub-section h5{
@@ -392,7 +393,7 @@ body h1, h2, h3, h4, h5, h6{
   padding-top: 32px;
 }
 .main-content .sub-section.portfolio h2{
-  margin-top: 42px;
+  margin-top: 0px;
   color: #ffffff;
 }
 .main-content .sub-section.portfolio .profile-table{
@@ -543,21 +544,21 @@ body h1, h2, h3, h4, h5, h6{
 }
 .inner-main {
   background: rgba(34,34,34,.8);
-  height: 100%;
+  height: calc(100% - 38px);
   left: 0;
   padding: 19px;
   position: absolute;
   top: 0;
-  width: 100%;
+  width: calc(100% - 38px);
 }
 .inner-brd {
   border: 1px solid #fff;
-  height: calc(100% - 140px);
+  height: calc(100% - 100px);
   left: 0;
   margin: 19px;
   position: absolute;
   top: 0;
-  width: calc(100% - 126px);
+  width: calc(100% - 88px);
   padding: 30px 22px 30px 26px;
 }
 .inner-main h4 {
@@ -633,13 +634,13 @@ body h1, h2, h3, h4, h5, h6{
 }
 .main-content .sub-section.skills{
   background-color: #f2f2f2;
-  padding-top: 2px;
+  padding-top: 0px;
   position: relative;
 }
 .main-content .sub-section.skills h2,
 .main-content .sub-section.blog h2,
 .main-content .sub-section.contact h2{
-  margin-top: 42px;
+  margin-top: 0px;
   margin-bottom: 0px;
 }
 .main-content .sub-section.skills .profile-table{
@@ -833,7 +834,7 @@ footer{
 }
 .main-content .sub-section.contact .profile h2{
   color: #fff;
-  margin-top: 38px;
+  margin-top: 0px;
   text-align: left;
 }
 .contact-form{
@@ -1103,7 +1104,6 @@ footer{
   .right .row .normal-txt a.link-email span{
     display: none;
   }
-
   .right .btn-container{
     margin-top: 28px;
   }
@@ -1166,6 +1166,7 @@ footer{
   .right .btn-container > a{
     background-color: #fff;
     color: #0088cc;
+    width: 100%;
   }
   .main-content .sub-section.portfolio h2{
     margin-top: 10px;
@@ -1396,5 +1397,33 @@ footer{
   }
   .sub-skills .section-row ul li:nth-child(2n) span.skill-star{
     right: 24px;
+  }
+}
+@media (min-width: 0px) and (max-width: 360px){
+  .sub-skills .section-row ul li span.skill-label{
+    font-size: 14px;
+  }
+  .sub-skills .section-row ul li a{
+    font-size: 14px;
+  }
+  
+  .blog .profile-sub-table .blog-card .txt-container{
+    padding: 22px 12px 10px 18px;
+  }
+  .blog .profile-sub-table .blog-card .txt-container p{
+    font-size: 12px;
+    line-height: 16px;
+    margin-top: 10px;
+  }
+  .blog .profile-sub-table .blog-card .txt-container h6{
+    line-height: 14px;
+  }
+  .main-content .sub-section h5{
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+  .right .row .normal-txt a.location-link{
+    line-height: 18px;
+    display: inline-grid;
   }
 }
