--- a/css/app.css
+++ b/css/app.css
@@ -390,7 +390,7 @@ body h1, h2, h3, h4, h5, h6{
 .sub-section.portfolio{
   background-color: #0077b3;
   position: relative;
-  padding-top: 32px;
+  padding-top: 0px;
 }
 .main-content .sub-section.portfolio h2{
   margin-top: 0px;
@@ -1169,7 +1169,7 @@ footer{
     width: 100%;
   }
   .main-content .sub-section.portfolio h2{
-    margin-top: 10px;
+    margin-top: 0px;
   }
   .header-content .menu-content{
     width: 160px;
@@ -1215,7 +1215,13 @@ footer{
     padding-top: 10px;
   }
   .main-content .sub-section.profile-section h2{
-    margin-top: 36px;
+    margin-top: 0px;
+  }
+  .portfolio .slider{
+    margin-bottom: 72px;
+  }
+  .blog .profile-sub-table{
+    padding-bottom: 72px;
   }
 }
 @media (min-width: 768px) and (max-width: 968px){
@@ -1318,7 +1324,7 @@ footer{
     font-size: 22px;
   }
   .main-content .sub-section.profile-section h2{
-    margin-top: 50px;
+    margin-top: 0px;
   }
   .main-content .sub-section.profile-section .profile-table{
     padding-top: 40px;
@@ -1406,7 +1412,10 @@ footer{
   .sub-skills .section-row ul li a{
     font-size: 14px;
   }
-  
+  .portfolio .slider .sub-slider p{
+    font-size: 13px;
+    line-height: 22px;
+  }
   .blog .profile-sub-table .blog-card .txt-container{
     padding: 22px 12px 10px 18px;
   }
