Update css for header menu

--- a/css/app.css
+++ b/css/app.css
@@ -342,10 +342,10 @@ body h1, h2, h3, h4, h5, h6{
   color: #fff;
 }
 .header-content .menu-content ul li > a{
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 100;
   color: #fff;
-  line-height: 62px;
+  line-height: 66px;
   text-decoration: none;
 }
 .header-content .menu-content ul li > a:hover{
@@ -463,7 +463,7 @@ body h1, h2, h3, h4, h5, h6{
   float: left;
   width: calc(32.2% - 64px);
   margin-right: 1.7%;
-  padding: 28px 32px 24px 30px;
+  padding: 28px 32px 24px 32px;
   background-color: #fff;
   border-radius: 2px;
   height: 408px;
@@ -992,7 +992,6 @@ footer{
   position: relative;
   left: auto;
   top: auto;
-  right: 0px;
   -webkit-padding-start: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
@@ -1001,8 +1000,10 @@ footer{
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
-  width: calc(100% - 88px);
-  padding-right: 88px;
+  max-width: 1024px;
+  width: 100%;
+  right: auto;
+  display: block;
 }
 .header-content .menu-content.pin-header ul li{
   font-size: 13px;
@@ -1012,8 +1013,8 @@ footer{
 }
 .header-content .menu-content.pin-header ul li > a{
   font-size: 13px;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding-left: 32px;
+  padding-right: 0px;
   line-height: 32px;
 }
 .redirect_to_header{
@@ -1214,6 +1215,8 @@ footer{
   .main-content .sub-section h5{
     line-height: 26px;
     margin-bottom: 28px;
+    padding-left: 25px;
+    padding-right: 25px;
   }
   .left h6, .right h6{
     margin-bottom: 0px;
@@ -1373,6 +1376,11 @@ footer{
   #redirect_to_header{
     display: none !important;
   }
+  .header-content .menu-content.pin-header ul{
+    padding-left: 20px;
+    padding-right: 20px;
+    width: calc(100% - 40px);
+  }
 }
 @media (min-width: 969px) and (max-width: 1052px){
   .main-content .sub-section .profile{
@@ -1439,6 +1447,11 @@ footer{
   }
   .sub-skills .section-row ul li:nth-child(2n) span.skill-star{
     right: 24px;
+  }
+  .header-content .menu-content.pin-header ul{
+    padding-left: 70px;
+    padding-right: 70px;
+    width: calc(100% - 140px);
   }
 }
 @media (min-width: 0px) and (max-width: 360px){
