enable the function of sending email

--- a/css/app.css
+++ b/css/app.css
@@ -1256,6 +1256,10 @@ footer{
   #redirect_to_header{
     display: none !important;
   }
+  .header-content .header-txt .head-icon{
+    width: 150px;
+    height: 150px;
+  }
 }
 @media (min-width: 768px) and (max-width: 968px){
   #hamburger-menu{
@@ -1381,6 +1385,10 @@ footer{
     padding-right: 20px;
     width: calc(100% - 40px);
   }
+  .header-content .header-txt .head-icon{
+    width: 160px;
+    height:160px;
+  }
 }
 @media (min-width: 969px) and (max-width: 1052px){
   .main-content .sub-section .profile{
@@ -1453,6 +1461,10 @@ footer{
     padding-right: 70px;
     width: calc(100% - 140px);
   }
+  .header-content .header-txt .head-icon{
+    width: 160px;
+    height: 160px;
+  }
 }
 @media (min-width: 0px) and (max-width: 360px){
   .sub-skills .section-row ul li span.skill-label{
@@ -1483,5 +1495,9 @@ footer{
   .right .row .normal-txt a.location-link{
     line-height: 18px;
     display: inline-grid;
+  }
+  .header-content .header-txt .head-icon{
+    width: 120px;
+    height: 120px;
   }
 }
