--- a/css/app.css
+++ b/css/app.css
@@ -883,6 +883,7 @@ footer{
   padding: 20px 16px 24px 20px;
   float: left;
   height: 128px;
+  cursor: pointer;
 }
 .blog .profile-sub-table .blog-card .txt-container h6{
   margin-top: 0px;
@@ -1044,6 +1045,26 @@ footer{
 .redirect_to_header a span{
   transform: rotate(270deg);
   display: inline-block;
+}
+.blog_content{
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 100;
+}
+.blog_content .blog_sub_content{
+  position: absolute;
+  height: 600px;
+  width: 800px;
+  background-color: #ffffff;
+  border-radius: 2px;
+  margin: -300px 0 0 -400px;
+  top: 50%;
+  left: 50%;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 }
 @media (min-width: 0px) and (max-width: 767px){
   #hamburger-menu{
@@ -1261,6 +1282,7 @@ footer{
     height: 150px;
   }
 }
+
 @media (min-width: 768px) and (max-width: 968px){
   #hamburger-menu{
     left: 36px;
