--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?huhojv');
-  src:  url('../fonts/icomoon.eot?huhojv#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?huhojv') format('truetype'),
-    url('../fonts/icomoon.woff?huhojv') format('woff'),
-    url('../fonts/icomoon.svg?huhojv#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?2qjxzh');
+  src:  url('../fonts/icomoon.eot?2qjxzh#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?2qjxzh') format('truetype'),
+    url('../fonts/icomoon.woff?2qjxzh') format('woff'),
+    url('../fonts/icomoon.svg?2qjxzh#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-close2:before {
+  content: "\e911";
+}
+.icon-clubs:before {
+  content: "\e918";
+}
+.icon-close:before {
+  content: "\e910";
+}
 .icon-chevron-thin-right:before {
   content: "\e903";
 }
@@ -32,6 +41,12 @@
 }
 .icon-pinterest-p:before {
   content: "\e900";
+}
+.icon-home3:before {
+  content: "\e902";
+}
+.icon-office:before {
+  content: "\e906";
 }
 .icon-home2:before {
   content: "\e901";
@@ -285,6 +300,9 @@
 .icon-arrow-down-right2:before {
   content: "\ea3d";
 }
+.icon-circle-up:before {
+  content: "\ea41";
+}
 .icon-circle-right:before {
   content: "\ea42";
 }
@@ -437,7 +455,4 @@
 }
 .icon-IcoMoon:before {
   content: "\eaea";
-}
-.icon-clubs:before {
-  content: "\e918";
 }
