--- a/css/app.css
+++ b/css/app.css
@@ -1228,15 +1228,16 @@ footer {
 
 .blog_content .blog_sub_content {
   position: absolute;
-  height: 600px;
-  width: 800px;
+  height: 580px;
+  width: 768px;
   background-color: #ffffff;
   border-radius: 2px;
-  margin: -300px 0 0 -400px;
+  margin: -290px 0 0 -384px;
   top: 50%;
   left: 50%;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   padding: 28px 12px;
+  /* overflow: auto; */
 }
 
 .blog_content .blog_sub_content a {
@@ -1244,28 +1245,39 @@ footer {
   position: absolute;
   right: 16px;
   top: 16px;
-  color: #0088cc;
-  border: 1px solid #0088cc;
-  border-radius: 50%;
-  height: 24px;
-  width: 24px;
+  color: #434242;
+  /* border: 1px solid #0088cc; */
+  /* border-radius: 50%; */
+  height: 28px;
+  width: 28px;
   text-align: center;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 29px;
 }
 
-.blog_content .blog_sub_content a:hover{
-  background-color: #0088cc;
-  color: #ffffff;
+.blog_content .blog_sub_content a>span {
+  color: #434242;
+  font-weight: 700;
+  opacity: 0.65;
+}
+
+.blog_content .blog_sub_content a:hover {
+  color: #0088cc;
+  font-weight: 700;
+}
+
+.blog_content .blog_sub_content a:hover>span {
+  opacity: 1;
+  color: #0088cc;
 }
 
 .blog_content .blog_sub_content .blog_header {
   display: inline-block;
-  width: calc(100% - 20px);
+  width: calc(100% - 28px);
   height: 80px;
   border-bottom: 1px solid #e3e3e3;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 14px;
+  padding-right: 14px;
 }
 
 .blog_content .blog_sub_content .blog_header img {
@@ -1293,6 +1305,39 @@ footer {
   height: 60px;
   color: #434242;
   opacity: 0.7;
+}
+
+.blog_content .blog_sub_content .blog_body {
+  padding-left: 14px;
+  padding-right: 14px;
+  height: 482px;
+  padding-bottom: 18px;
+}
+
+.blog_content .blog_sub_content .blog_body p {
+  font-size: 14px;
+  font-weight: 300;
+  margin-top: 10px;
+  line-height: 22px;
+}
+
+.blog_content .blog_sub_content .blog_body p.syntax {
+  background-color: #f3f3f3;
+  padding-left: 12px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-right: 12px;
+  color: #434242;
+  font-weight: 300;
+  border-radius: 2px;
+  border: 1px solid #e3e3e3;
+}
+
+.blog_content .blog_sub_content .blog_body h6 {
+  margin-top: 16px;
+  margin-bottom: 8px;
+  font-size: 15px;
+  font-weight: 700;
 }
 
 @media (min-width: 0px) and (max-width: 767px) {
