--- a/css/app.css
+++ b/css/app.css
@@ -1232,6 +1232,10 @@ footer {
   z-index: 100;
 }
 
+.blog_content.show .blog_sub_content {
+  background-color: transparent;
+}
+
 .blog_content .blog_sub_content {
   position: absolute;
   height: 580px;
@@ -1242,8 +1246,19 @@ footer {
   top: 50%;
   left: 50%;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  padding: 28px 12px;
   /* overflow: auto; */
+}
+
+.blog_content .blog_sub_content .blog_row {
+  position: relative;
+  padding: 28px 12px;
+  height: calc(100% - 56px);
+}
+
+.blog_content .blog_sub_content .blog_row .blog_table {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
 }
 
 .blog_content .blog_sub_content a {
@@ -1316,7 +1331,7 @@ footer {
 .blog_content .blog_sub_content .blog_body {
   padding-left: 14px;
   padding-right: 14px;
-  height: 482px;
+  height: 426px;
   padding-bottom: 18px;
 }
 
@@ -1422,13 +1437,26 @@ footer {
   font-weight: 100;
 }
 
-.blog_content .blog_sub_content .blog_body p a.article_links{
+.blog_content .blog_sub_content .blog_body p a.article_links {
   font-weight: 100;
 }
 
-.blog_content .blog_sub_content .blog_body > ul > li {
+.blog_content .blog_sub_content .blog_body>ul>li {
   font-size: 14px;
   font-weight: 100;
+}
+
+#blog_spinner_id {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  background-color: rgba(0, 0, 0, 0.5);
+  left: 0px;
+  display: none;
+}
+#blog_spinner_id .icon-spinner{
+  margin-top: 260px;
 }
 
 @media (min-width: 0px) and (max-width: 767px) {
